--- a/composer.json
+++ b/composer.json
@@ -70,5 +70,12 @@
             ]
         },
         "enable-patching": true
+    },
+    "require-dev": {
+        "behat/mink-extension": "v2.2",
+        "behat/mink-selenium2-driver": "^1.3",
+        "bex/behat-screenshot": "^1.2",
+        "drupal/coder": "^8.2",
+        "drupal/drupal-extension": "master-dev"
     }
 }
